@@ -18,6 +18,8 @@
   to a function/expression.  
 - fixed a line number skew issue when approximating the line numbers where
   a closure originated.
+- added a -a/--ast command line option to dump the abstract syntax tree
+  for the specified script.  
 
 2.1-beta 10 (20 Nov 06)
 ===========
